# balanceTonRayon

./: .clang-format  .gitignore  CPPLINT.cfg  LICENSE  README.md  choices.md  object.hpp  partie1.md  preliminaryAnalysis.md  ray.hpp  references.md
.github/workflows/: cmake.yml
data/: billiard.xml  daltons.xml  prez.xml  walkTrees.xml
documentation/: Présentation v2.pptx  Présentation.pptx  analysePreliminaire.md  choix.md  developmentNotes.md  fonctionnalites.md  references.md
src/: CMakeLists.txt  Config.h  Config.h.in  ImgHandler.hpp  ImgReader.hpp  ObjParser.hpp  Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  RayTracing  RayTracing.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  lodepng.cpp  main.cpp  utils.hpp
src/Object/: AearaLight.hpp  AreaLight.cpp  AreaLight.hpp  BasicObject.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DirectLight.cpp  DirectLight.hpp  Inter.hpp  Light.cpp  Light.hpp  PhysicalObject.hpp  Plane.cpp  Plane.hpp  Polygon.cpp  Polygon.hpp  PolygonMesh.cpp  PolygonMesh.hpp  Sphere.cpp  Sphere.hpp  SpotLight.cpp  SpotLight.hpp  Triangle.cpp  Triangle.hpp  TriangleMesh.cpp  TriangleMesh.hpp
src/lodepng/: lodepng.h
src/scenes/: daltons.xml
src/utils/: utils.hpp
